--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jungyoon Choi | CV</title>
+  <title>Ko Gun| CV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header class="header">
-      <h1>Jungyoon Choi</h1>
-      <p>Front-End Developer</p>
+      <h1>Ko Gun</h1>
+      <p>Researcher</p>
     </header>
 
     <section id="about">
@@ -24,7 +24,6 @@
       <ul>
         <li>HTML5, CSS3, JavaScript</li>
         <li>React.js, Next.js</li>
-        <li>Git & GitHub</li>
       </ul>
     </section>
 
@@ -55,7 +54,7 @@
     </section>
 
     <footer>
-      <p>&copy; 2025 Jungyoon Choi</p>
+      <p>&copy; 2025 Ko Gun</p>
     </footer>
   </div>
 </body>
