--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ko Gun| CV</title>
+  <title>Ko Gun | CV</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <header class="header">
+      <!-- 프로필 사진 섹션 -->
+      <div class="profile-photo">
+        <img src="path/to/your-photo.jpg" alt="Ko Gun 프로필 사진">
+      </div>
       <h1>Ko Gun</h1>
       <p>Researcher</p>
     </header>
