--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <!-- 프로필 사진 섹션 -->
       <div class="profile-photo">
-        <img src="path/to/your-photo.jpg" alt="Ko Gun 프로필 사진">
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dongascience.com%2Fnews.php%3Fidx%3D35340&psig=AOvVaw3Kzlcu_QsG3C2NzluVba44&ust=1754210060354000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCOiSjO7b644DFQAAAAAdAAAAABAE" alt="Ko Gun 프로필 사진">
       </div>
       <h1>Ko Gun</h1>
       <p>Researcher</p>
