--- a/index.html
+++ b/index.html
@@ -1,65 +1,49 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ko Gun | CV</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Researcher CV - Your Name</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-      <!-- 프로필 사진 섹션 -->
-      <div class="profile-photo">
-        <img src="http://image.dongascience.com/Photo/2020/03/5bddba7b6574b95d37b6079c199d7101.jpg" alt="Ko Gun 프로필 사진">
-      </div>
-      <h1>Ko Gun</h1>
-      <p>Researcher</p>
-    </header>
-
-    <section id="about">
-      <h2>소개</h2>
-      <p>간단한 자기소개 문구를 여기에 작성하세요.</p>
-    </section>
-
-    <section id="skills">
-      <h2>기술 스택</h2>
-      <ul>
-        <li>HTML5, CSS3, JavaScript</li>
-        <li>React.js, Next.js</li>
-      </ul>
-    </section>
-
-    <section id="experience">
-      <h2>경력</h2>
-      <div class="item">
-        <h3>회사명 - 직책 (2023.01 - 현재)</h3>
-        <p>주요 업무 및 성과를 여기에 작성하세요.</p>
-      </div>
-      <!-- 다른 경력 항목도 추가 -->
-    </section>
-
-    <section id="education">
-      <h2>학력</h2>
-      <div class="item">
-        <h3>대학교 이름 (2016 - 2020)</h3>
-        <p>전공 및 학교 활동 요약.</p>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>연락처</h2>
-      <ul>
-        <li>이메일: example@email.com</li>
-        <li>GitHub: <a href="https://github.com/username">github.com/username</a></li>
-        <li>LinkedIn: <a href="#">linkedin.com/in/username</a></li>
-      </ul>
-    </section>
-
-    <footer>
-      <p>&copy; 2025 Ko Gun</p>
-    </footer>
-  </div>
+    <div class="container">
+        <aside class="sidebar">
+            <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile-pic">
+            <h1>Your Name</h1>
+            <p class="title">Researcher / Field Expert</p>
+            <ul class="contact">
+                <li>Email: your.email@example.com</li>
+                <li>Phone: +123 456 7890</li>
+                <li>Website: yourwebsite.com</li>
+                <li>GitHub: github.com/yourusername</li>
+            </ul>
+            <h2>Education</h2>
+            <p><strong>Ph.D. in Your Field</strong><br>University Name, 2018 - 2022</p>
+            <p><strong>MSc in Related Field</strong><br>University Name, 2016 - 2018</p>
+        </aside>
+        <main class="main-content">
+            <section>
+                <h2>Career Profile</h2>
+                <p>
+                    Brief summary of your research background, interests, and goals.
+                    Mention your key areas of expertise and career objectives.
+                </p>
+            </section>
+            <section>
+                <h2>Experiences</h2>
+                <div class="job">
+                    <h3>Postdoctoral Researcher</h3>
+                    <span class="place">Research Institute, City</span> <span class="years">2022 - Present</span>
+                    <p>Describe your work, publications, collaborations, and impact.</p>
+                </div>
+                <div class="job">
+                    <h3>Graduate Research Assistant</h3>
+                    <span class="place">University Lab, City</span> <span class="years">2018 - 2022</span>
+                    <p>Include your dissertation topic, lab work, and major findings.</p>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
