--- a/index.html
+++ b/index.html
@@ -8,20 +8,6 @@
 </head>
 <body>
     <div class="container">
-        <aside class="sidebar">
-            <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile-pic">
-            <h1>Your Name</h1>
-            <p class="title">Researcher / Field Expert</p>
-            <ul class="contact">
-                <li>Email: your.email@example.com</li>
-                <li>Phone: +123 456 7890</li>
-                <li>Website: yourwebsite.com</li>
-                <li>GitHub: github.com/yourusername</li>
-            </ul>
-            <h2>Education</h2>
-            <p><strong>Ph.D. in Your Field</strong><br>University Name, 2018 - 2022</p>
-            <p><strong>MSc in Related Field</strong><br>University Name, 2016 - 2018</p>
-        </aside>
         <main class="main-content">
             <section>
                 <h2>Career Profile</h2>
@@ -34,16 +20,38 @@
                 <h2>Experiences</h2>
                 <div class="job">
                     <h3>Postdoctoral Researcher</h3>
-                    <span class="place">Research Institute, City</span> <span class="years">2022 - Present</span>
+                    <span class="place">Research Institute, City</span> 
+                    <span class="years">2022 - Present</span>
                     <p>Describe your work, publications, collaborations, and impact.</p>
                 </div>
                 <div class="job">
                     <h3>Graduate Research Assistant</h3>
-                    <span class="place">University Lab, City</span> <span class="years">2018 - 2022</span>
+                    <span class="place">University Lab, City</span> 
+                    <span class="years">2018 - 2022</span>
                     <p>Include your dissertation topic, lab work, and major findings.</p>
                 </div>
             </section>
         </main>
+
+        <aside class="sidebar">
+            <div class="profile-header">
+                <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile-pic">
+                <h1>Your Name</h1>
+                <p class="title">Researcher / Field Expert</p>
+            </div>
+            <div class="contact-education">
+                <ul class="contact">
+                    <li>Email: your.email@example.com</li>
+                    <li>Phone: +123 456 7890</li>
+                    <li>Website: yourwebsite.com</li>
+                    <li>GitHub: github.com/yourusername</li>
+                </ul>
+                <h2>Education</h2>
+                <p><strong>Ph.D. in Your Field</strong><br>University Name, 2018 - 2022</p>
+                <p><strong>MSc in Related Field</strong><br>University Name, 2016 - 2018</p>
+            </div>
+        </aside>
     </div>
 </body>
 </html>
+
