--- a/index.html
+++ b/index.html
@@ -36,20 +36,18 @@
         <aside class="sidebar">
             <div class="profile-header">
                 <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile-pic">
-                <h1>Your Name</h1>
-                <p class="title">Researcher / Field Expert</p>
+                <h1>고건 Ko Gun</h1>
+                <p class="title">Historian / Researcher</p>
             </div>
             <div class="contact-education">
                 <ul class="contact">
-                    <li>Email: your.email@example.com</li>
-                    <li>Phone: +123 456 7890</li>
-                    <li>Website: yourwebsite.com</li>
-                    <li>GitHub: github.com/yourusername</li>
+                    <li>Location_ Seoul, Republic of Korea</li>
+                    <li>Email: gogun12@korea.ac.kr</li>
                 </ul>
                 <h2>Education</h2>
-                <p><strong>Ph.D. in Your Field</strong><br>University Name, 2018 - 2022</p>
-                <p><strong>MSc in Related Field</strong><br>University Name, 2016 - 2018</p>
-            </div>
+                <p><strong>Ph.D. in History Education</strong><br> Korea University, 2025 - present</p>
+                <p><strong>M.A. in History Education</strong><br>Korea University, 2022 - 2025</p>
+                <p><strong>B.A. in History Education, and Political Science & International Relations (Double Major)</strong><br>Korea University, 2016 - 2022</p>
         </aside>
     </div>
 </body>
