--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="contact-education">
                 <ul class="contact">
-                    <li>Location_ Seoul, Republic of Korea</li>
+                    <li>Location: Seoul, Republic of Korea</li>
                     <li>Email: gogun12@korea.ac.kr</li>
                 </ul>
                 <h2>Education</h2>
