--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
     <div class="container">
         <main class="main-content">
             <section>
-                <h2>Career Profile</h2>
+                <h2>ABOUT</h2>
                 <p>
-                    Brief summary of your research background, interests, and goals.
-                    Mention your key areas of expertise and career objectives.
+                    안녕 난 고건임.
                 </p>
             </section>
             <section>
-                <h2>Experiences</h2>
+                <h2>RESEARCH</h2>
                 <div class="job">
-                    <h3>Postdoctoral Researcher</h3>
+                    <h3>Research Interests</h3>
                     <span class="place">Research Institute, City</span> 
                     <span class="years">2022 - Present</span>
                     <p>Describe your work, publications, collaborations, and impact.</p>
                 </div>
                 <div class="job">
-                    <h3>Graduate Research Assistant</h3>
+                    <h3>Publications</h3>
                     <span class="place">University Lab, City</span> 
                     <span class="years">2018 - 2022</span>
                     <p>Include your dissertation topic, lab work, and major findings.</p>
