--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <aside class="sidebar">
             <div class="profile-header">
-                <img src="https://via.placeholder.com/120" alt="Profile Photo" class="profile-pic">
+                <img src="images/profile.jpeg" alt="Profile Photo" class="profile-pic">
                 <h1>고건 Ko Gun</h1>
                 <p class="title">Historian / Researcher</p>
             </div>
