--- a/index.html
+++ b/index.html
@@ -19,15 +19,11 @@
                 <h2>RESEARCH</h2>
                 <div class="job">
                     <h3>Research Interests</h3>
-                    <span class="place">Research Institute, City</span> 
-                    <span class="years">2022 - Present</span>
-                    <p>Describe your work, publications, collaborations, and impact.</p>
+                    <p>Describe your research interests.</p>
                 </div>
                 <div class="job">
                     <h3>Publications</h3>
-                    <span class="place">University Lab, City</span> 
-                    <span class="years">2018 - 2022</span>
-                    <p>Include your dissertation topic, lab work, and major findings.</p>
+                    <p>Describe your publications.</p>
                 </div>
             </section>
         </main>
